<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:title="@string/pronunciation_preference_title"
        android:key="@string/pronunciation_dictionary_key"
        android:entries="@array/unit_entries"
        android:entryValues="@array/unit_values"
        android:defaultValue="@string/ahd_key"/>

    <com.eightblocksaway.android.practicepronunciation.view.AboutDialog
        android:key="@string/about_dialog_key"
        android:title="@string/about_dialog_title"
        android:summary="@string/about_dialog_summary"
        android:dialogMessage="@string/about_message"
        android:positiveButtonText="Got it"
        android:negativeButtonText="@null"/>

    <Preference android:title="@string/privacy_policy_title"
        android:key="@string/privacy_policy_button"
        android:summary="@string/privacy_policy_summary"/>

</PreferenceScreen>