<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/app_fg"
        android:layout_marginBottom="8dp"
        tools:context="com.eightblocksaway.android.practicepronunciation.view.DetailFragment">

        <TextView android:id="@+id/phraseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:background="@color/primary"
            android:text="@string/phrase_placeholder"
            android:textStyle="bold"
            android:textColor="@color/app_fg"
            android:padding="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/app_fg"
            android:layout_marginBottom="8dp"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/hyphenation" />

            <LinearLayout
                android:id="@+id/hyphenationList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/dictionary" />

            <LinearLayout
                android:id="@+id/definitionList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
